(lang dune 2.8)
(version 0.1.0)
(source (github smimram/afind))
(license GPL-3.0)
(authors "Samuel Mimram <smimram@gmail.com>")
(maintainers "Samuel Mimram <smimram@gmail.com>")

(generate_opam_files true)
(package
  (name afind)
  (synopsis "Find similar files")
  (description "Find pairs of similar files according to Levenshtein distance.")
)
